--- a/front/apps/webhome/src/pages/budget/styles/Window.scss
+++ b/front/apps/webhome/src/pages/budget/styles/Window.scss
@@ -6,7 +6,7 @@
 
     &>div:nth-last-child(2) {
         margin: 1.75em 0;
-        flex: 1 1 0;
+        flex: 2 1 0;
     }
 
     &>div:last-child {
